# yapstack

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.cursor/rules/: main.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent_ready_task.yml  bug_report.yml  config.yml  feature_request.yml
.github/ISSUE_TEMPLATE/_drafts/: chronic_drain_backlog.md
.github/workflows/: ci-checks.yml  ci.yml  dependabot-auto-merge.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  device_broker.rs  embedding_db.rs  lib.rs  logging.rs  main.rs  system_volume.rs
apps/desktop/src-tauri/src/commands/: app_nap.rs  audio.rs  capture.rs  dictation.rs  embedding.rs  error.rs  live_transcription.rs  logs.rs  mod.rs  permissions.rs  silero_vad.rs  system_volume.rs  transcription.rs  transcription_scheduler.rs
apps/desktop/src/components/: AIChatMessage.test.tsx  AIChatMessage.tsx  AIContextProvider.tsx  AppLayout.tsx  AppSidebar.tsx  AudioPlayer.test.tsx  AudioPlayer.tsx  AutoTagSuggestions.tsx  BackfillDropdown.tsx  ChatView.tsx  DictationBubble.tsx  DictationFeedEntry.tsx  DictationHistoryList.tsx  DictationTrayItem.tsx  EditableSegment.test.tsx  EditableSegment.tsx  FloatingChatBar.tsx  FolderDialog.test.tsx  FolderDialog.tsx  FolderItem.tsx  InsightOverlay.tsx  InsightSwitcher.tsx  ListContextBar.tsx  LogsPanel.tsx  MarqueeOverlay.tsx  NoteCard.test.tsx  NoteCard.tsx  NoteCardList.tsx  NoteDetailView.tsx  NoteEditor.tsx  NoteHistoryPanel.tsx  OnboardingModal.test.tsx  OnboardingModal.tsx  RecordingBeacon.test.tsx  RecordingBeacon.tsx  RecordingIndicator.tsx  SearchCommand.tsx  SessionHeader.tsx  SessionListItem.tsx  SettingsPanel.tsx  (+9 more)
apps/desktop/src/components/ai/: AssignmentsSection.tsx  AssignmentsSummary.tsx  ConnectionEditorDialog.tsx  ConnectionsSection.tsx  ConnectionsSubTab.tsx  CustomProviderFields.tsx  ProfileEditorDialog.tsx  ProfilePicker.tsx  ProfilesSection.tsx  ProfilesSubTab.tsx
apps/desktop/src/components/chat/: ChatInputBar.tsx  ChatProfilePickerPill.tsx  ContextPill.tsx  ModelPickerPill.tsx
apps/desktop/src/components/insights/: InsightCard.tsx
apps/desktop/src/components/settings/: AITab.tsx  AudioTab.tsx  DictationTab.test.tsx  DictationTab.tsx  GeneralTab.tsx  InsightsTab.tsx  ModelSection.tsx  ParakeetModelSection.tsx  ShortcutsTab.test.tsx  ShortcutsTab.tsx  TranscriptionTab.tsx
apps/desktop/src/components/transcript/: BulkActionsBar.tsx
apps/desktop/src/components/ui/: badge.tsx  (+14 more)
apps/desktop/src/hooks/: useAutoSetup.ts  useAutoTag.ts  useCaptureEvents.ts  useChatMessages.ts  useClickOutside.test.ts  useClickOutside.ts  useCreateSession.ts  useDictation.ts  useDictationEntry.ts  useDownloadProgress.ts  useGlobalShortcuts.ts  useInsightEngine.ts  useInsightOverlayController.ts  useKeyboardShortcuts.ts  useLiveTranscriptionEvents.ts  useOverlayStyles.ts  useRecordingIndicator.ts  useRefreshConnectionModels.ts  useTrayEvents.ts  useUpdateCheck.ts
apps/desktop/src/lib/: ai-actions.test.ts  ai-actions.ts  ai-config.test.ts  ai-config.ts  ai-context.test.ts  ai-context.ts  ai-prompts.test.ts  ai-prompts.ts  ai-tools.test.ts  ai-tools.ts  ai.test.ts  ai.ts  analytics.test.ts  analytics.ts  auto-tag.ts  backfill.ts  chat-history.test.ts  chat-history.ts  db.ts  embedding-backfill.ts  events.ts  export.ts  folder-badge.ts  folder-constants.ts  folder-tree.test.ts  folder-tree.ts  insights.test.ts  insights.ts  keepAwake.ts  logger.test.ts  logger.ts  logs.ts  note-text.test.ts  note-text.ts  reveal-file.ts  shortcuts.test.ts  shortcuts.ts  tauri.ts  tiptap-segment-ref.ts  transcription.ts  (+4 more)
apps/desktop/src/stores/: appStore.ts  applyDeviceList.test.ts  segmentSelection.test.ts
apps/desktop/src/test/: helpers.ts  match-media.ts  setup.ts  tauri-mocks.ts
crates/yapstack-audio/: Cargo.toml
crates/yapstack-audio/src/: capture.rs  device.rs  error.rs  export.rs  lib.rs  manager.rs  mic.rs  mixer.rs  ring_buffer.rs  stream.rs
crates/yapstack-audio/src/system/: device_watcher.rs  mod.rs
crates/yapstack-common/: Cargo.toml
crates/yapstack-common/src/: audio.rs  config.rs  embedding.rs  engines.rs  hallucination.rs  lib.rs  types.rs
crates/yapstack-embedding/: Cargo.toml
crates/yapstack-embedding-sidecar/: Cargo.toml
crates/yapstack-embedding-sidecar/src/: main.rs
crates/yapstack-embedding/src/: client.rs  error.rs  lib.rs  supervisor.rs
crates/yapstack-sidecar/: Cargo.toml
crates/yapstack-sidecar/src/: main.rs
crates/yapstack-sidecar/src/engines/: mod.rs  parakeet.rs  whisper.rs
crates/yapstack-transcription/: Cargo.toml
crates/yapstack-transcription-sidecar/: Cargo.toml
crates/yapstack-transcription-sidecar/src/: diarization.rs  main.rs
crates/yapstack-transcription-sidecar/src/engines/: mod.rs  parakeet.rs  whisper.rs
crates/yapstack-transcription/src/: client.rs  error.rs  lib.rs  model.rs  whisper.rs
docs/: AGENT_GUIDE.md  AI_CONTEXT.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  FRONTEND.md  GLOSSARY.md  IMPLEMENTATION_LOG.md  INDEX.md  LINEAR_TICKETS.md  LOCAL_LLM.md  PRINCIPLES.md  RELEASE.md  UBIQUITOUS_LANGUAGE.md
docs/adr/: 0001-adopt-agents-md.md  0002-chat-context-settings-frontend-schema.md  0003-ai-keys-in-renderer-settings.md  README.md
docs/plans/: dictation-escape-cancel.md  parakeet-variants.md  session-resume-parts.md  shared-scheduler-dictation.md  tree-shake-cleanup.md
docs/qa/: device-failover.md
scripts/: build-dmg.sh  build-embedding-sidecar.sh  build-sidecar.sh  build-sidecars.sh  build-transcription-sidecar.sh  download-test-fixtures.sh
(+16 files in other folders)
