[package]
name = "yapstack-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = { workspace = true }
yapstack-common = { path = "../yapstack-common" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hound = { workspace = true }
tempfile = { workspace = true }
mp3lame-encoder = { workspace = true }
