[package]
name = "yapstack-embedding"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
yapstack-common = { path = "../yapstack-common" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "macros", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
