[package]
name = "yapstack-sidecar"
version = "0.1.0"
edition = "2021"

[features]
whisper = ["dep:whisper-rs"]
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]

[dependencies]
yapstack-common = { path = "../yapstack-common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hound = { workspace = true }
whisper-rs = { version = "0.15", optional = true }
