[package]
name = "yapstack-transcription"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[features]
whisper = ["dep:whisper-rs"]

[dependencies]
yapstack-common = { path = "../yapstack-common" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
whisper-rs = { version = "0.16", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
