[package]
name = "yapstack-desktop"
version = "1.0.0-alpha.10"
edition = "2021"
license.workspace = true
repository.workspace = true

[lib]
name = "yapstack_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
yapstack-audio = { path = "../../../crates/yapstack-audio" }
yapstack-common = { path = "../../../crates/yapstack-common" }
yapstack-transcription = { path = "../../../crates/yapstack-transcription" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Used by `db::ensure_runtime_schema` to perform a single direct ALTER TABLE
# at startup (out-of-band of tauri-plugin-sql's migration list).
rusqlite = { version = "0.32", features = ["bundled"] }
hound = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
tokio = { workspace = true }
futures-util = { workspace = true }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"
tauri-plugin-aptabase = { git = "https://github.com/Claytonn/tauri-plugin-aptabase", branch = "fix/tokio-runtime-panic" }
percent-encoding = "2"
tauri-plugin-http = "2.5.8"
# Silero VAD (V5 ONNX, bundled via the `bundled` default feature) replaces
# the hand-rolled RMS energy detector in the live-transcription loop for
# both engines. Speech-trained; robust to background noise, music, and
# quiet speech that RMS would either miss or false-trigger on.
silero = "0.2"

[dev-dependencies]
tempfile = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
# CoreAudio FFI for the dictation duck feature (system_volume module).
# Same version pinned in yapstack-audio so cargo deduplicates the build.
coreaudio-sys = { version = "0.2", default-features = false, features = ["core_audio"] }
